<resources>
    <string name="app_name">当当熊</string>
    <string name="action_settings">设置</string>
    <string name="title_error">错误提示</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="baby_title">位 置</string>
    <string name="main_msg">消息</string>
    <string name="main_contact">联系人</string>
    <string name="main_bb">位置</string>
    <string name="main_bbg">宝宝圈</string>
    <string name="main_near">附 近</string>
    <string name="main_my">设置</string>
    <string name="search">搜索</string>
    <string name="mark">备注</string>
    <string name="setting">设置</string>
    <string name="baby_group_publish">发表</string>
    <string name="baby_group_comment_message">消息内容</string>
    <string name="login_post_data">正在登录……</string>
    <string name="get_device_data">正在获取位置……</string>
    <string name="get_device_history_data">正在获取历史位置……</string>
    <string name="location_data">正在定位……</string>
    <string name="elec_save_switch">正在进行省电开关设置……</string>
    <string name="calling_data">正在呼叫……</string>
    <string name="login_err">登录失败,请检查网络连接！</string>
    <string name="login_failed">登录失败,请检查用户名和密码</string>
    <string name="add_device_post_data">正在保存信息……</string>
    <string name="delete_device_post_data">正在删除……</string>
    <string name="add_device_err">添加手表失败，请重新扫描二维码</string>
    <string name="add_device_scan">请先扫描二维码获取设备</string>
    <string name="add_device_success">添加手表成功</string>
    <string name="add_device_user_success">添加/修改监护对象成功!\n如果是新添加监护对象，则需要在手表上按中间键确定关联后，本应用才能与手表配合工作！</string>
    <string name="delete_device_success">删除监护对象成功</string>
    <string name="login_phone_hint">用户名</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_str">登录</string>
    <string name="regist_str">注册</string>
    <string name="remember_pwd_str">记住密码</string>
    <string name="forgot_pwd_str">忘记密码?</string>
    <string name="find_pwd_str">找回密码</string>
    <string name="find_pwd_next_step">下一步骤</string>
    <string name="update_data">正在更新数据……</string>
    <string name="watch">手表</string>
    <string name="send_valid_msg_to_target">已向目标号码发送验证码</string>
    <string name="media_mounted_no">请插入SD卡</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="zxing_dialog_title">二维码完成</string>
    <string name="zxing_scan_barcode">扫描二维码</string>
    <string name="zxing_dialog_cancel">取消</string>
    <string name="zxing_dialog__sure">确定</string>
    <string name="valid_code">验证码</string>
    <string name="register_title">账号注册</string>
    <string name="phone_hint">您的用户名</string>
    <string name="pwd_hint">支持6-20个字母、数字或字符</string>
    <string name="valid_hint">请输入验证码</string>
    <string name="get_valid_hint">获取验证码</string>
    <string name="send_valid_code">正在发送验证码</string>
    <string name="phone_err_notify">您输入的用户名错误或已经存在,请重新输入或直接进行登录</string>
    <string name="get_valid_again">重新验证</string>
    <string name="time_minus_hint">秒后重新获取</string>
    <string name="phone_err_">请输入正确的手机号码以获取验证码</string>
    <string name="phone_num_err">手表电话号码有误，请先到账户管理中修改</string>
    <string name="phone_num_null">该用户暂无号码，无法联系</string>
    <string name="phone_err_exist">号码已被注册</string>
    <string name="pwd_null_err">密码不能为空</string>
    <string name="pwd_confirm_err">确认密码与你输入的密码不一致</string>
    <string name="pwd_length_err">密码长度只能为6到20个字母、数字或字符</string>
    <string name="phone_null_err">用户名不能为空</string>
    <string name="valid_null_err">验证码不能为空</string>
    <string name="regist_post_data">正在注册中</string>
    <string name="regist_fail">注册失败,请重试</string>
    <string name="protocol_notify">点击"注册"即意味着你已阅读并同意</string>
    <string name="protocol_title">用户协议</string>
    <string name="pwd_setup_success">密码设置成功</string>
    <string name="phone_not_null">电话号码不能为空</string>
    <string name="phone_format_error">电话号码格式不正确</string>
    <string name="send_voice_post_data">正在发送语音文件当中</string>
    <string name="recording_fail">时间太短,录音失败</string>
    <string name="send_voice_fail">语音发送失败</string>
    <string name="send_voice_success">语音发送成功</string>
    <string name="send">发送</string>
    <string name="press_talk">按住 说话</string>
    <string name="have_msg">新消息</string>
    <string name="stranger">陌生人</string>
    <string name="msg_pic">[图片]</string>
    <string name="msg_audio">[语音]</string>
    <string name="msg_video">[视频]</string>
    <string name="msg_file">[文件]</string>
    <string name="msg_sys">[系统消息]</string>
    <string name="msg_unkonow">[未知]</string>
    <string name="msg_face">[表情]</string>
    <string name="send_pic_failed">发送图片失败，请确认图片格式是否正确！</string>
    <string name="send_sound_record_success">录音请求发送成功</string>
    <string name="send_sound_record_failure">录音请求发送失败，请重试</string>
    <string name="geo_coder_err">抱歉，未能找到结果</string>
    <string name="confirm_logout_txt">退出后将无法接收手表报警信息!</string>
    <string name="confirm_logout_offline_txt">您的账号已经在其它终端登录，您被迫下线!</string>
    <string name="msg_notify">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="known">知道了</string>
    <string name="fence_title">安全区域</string>
    <string name="fence_setup_str">设置安全区域</string>
    <string name="fence_setup_next">下一步</string>
    <string name="fence_center_err">请设置安全区域中心点</string>
    <string name="fence_center_name">请设置安全区域名称</string>
    <string name="voice_title">语音限制</string>
    <string name="fence_profile">点击需要设置的区域的中心点，再点击“设置安全区域”，设置完成后，如监护对象在指定时间段进出安全区域， 监护人会收到提醒信息。</string>
    <string name="fence_choice_radius">选择半径</string>
    <string name="fence_choice_time">选择时间</string>
    <string name="choice_time_profile">设置此时段如上课时间后，手表不能收发语音，但可远程录音</string>
    <string name="fence_click_title">您想进行哪种操作？</string>
    <string name="notice_delete_area">确认删除这个安全区域？</string>
    <string name="fence_delete_success">删除成功</string>
    <string name="fence_delete_exception">删除失败，请重试</string>
    <string name="fence_delete_failure">操作异常，请重试</string>
    <string name="fence_null_data">请设置安全区域</string>
    <string name="edit_fence">[点击编辑]</string>
    <string name="fence_name">安全区域名称</string>
    <string name="about_title">关于我们</string>
    <string name="about_version">软件版本:</string>
    <string name="about_req_fail">请求版本信息失败!</string>
    <string name="about_version_new">已经是最新版本！</string>
    <string name="about_website">官方网站</string>
    <string name="about_website_str">欢迎光临我们的官方网站，获取更多信息！</string>
    <string name="about_website_link">www.babybear.com</string>
    <string name="about_feedback">我想吐槽</string>
    <string name="about_feedback_title">您的意见或建议:</string>
    <string name="about_feedback_num">(0/500)</string>
    <string name="about_feedback_num_larger">你输入的字数已经超过了限制！</string>
    <string name="about_feedback_content_null">请输入吐槽的内容!</string>
    <string name="about_feedback_succ">发送成功！</string>
    <string name="post_data">正在发送……</string>
    <string name="update_failed">获取新版本信息失败，可能是网络原因，请稍后再试...</string>
    <string name="version_tit">版本：</string>
    <string name="account_manager_title">账户管理</string>
    <string name="account_title">账 号</string>
    <string name="keeper_manager">监护人</string>
    <string name="friends_manager">好友</string>
    <string name="keeper_object_manager">监护对象</string>
    <string name="user_name">用户名：</string>
    <string name="device_sim_name">手表SIM卡号</string>
    <string name="imei_name">IMEI号</string>
    <string name="user_pwd">密&#160;&#160;&#160;&#160;码：</string>
    <string name="name_length_limit">名字最多支持3个汉字或者6个英文字母或者数字</string>
    <string name="name">名字</string>
    <string name="add_friends_message">好友信息</string>
    <string name="add_friend">添加好友</string>
    <string name="friends_name">名字</string>
    <string name="friends_relationship">关系</string>
    <string name="friends_phone">电话</string>
    <string name="friends_phone_hint">座机号需要加区号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_name">请输入名字</string>
    <string name="please_input_relationship">请输入您和该好友的关系</string>
    <string name="menu_chat_str">语 音</string>
    <string name="no_message_">无语音记录</string>
    <string name="menu_call_str">远程呼叫</string>
    <string name="menu_alarm_str">报警信息</string>
    <string name="menu_recorrect_str">位置纠错</string>
    <string name="history_location_str">历史轨迹</string>
    <string name="no_history_location_data">无历史轨迹</string>
    <string name="menu_clear_str">清除紧急报警</string>
    <string name="warn_message_title">报警信息</string>
    <string name="recorrect_title">我要纠错</string>
    <string name="recorrect_notify">按住图标拖动,立即纠偏</string>
    <string name="recorrect_success">纠偏成功</string>
    <string name="add_user_title">添加账号</string>
    <string name="add_device_title">添加监护对象</string>
    <string name="add_user_num_larger">只能添加四个监护人</string>
    <string name="add_friends_num_larger">只能添加六个好朋友</string>
    <string name="add_user_permission_err">副用户不允许添加监护人</string>
    <string name="edit_device_title">监护对象信息</string>
    <string name="edit_user_title">账号信息</string>
    <string name="add_user_relation_null">请选择关系</string>
    <string name="add_user_phone_null">名字不能为空</string>
    <string name="add_user_pwd_null">密码不能为空</string>
    <string name="add_user_pwd_confirm_null">密码和确认密码不相同，请检查是否输错密码！</string>
    <string name="add_user_success">添加监护人信息成功</string>
    <string name="arise_main_keeper">设置主监护人</string>
    <string name="keeper_personal_msg">监护人信息</string>
    <string name="delete_user_success">删除监护人信息成功</string>
    <string name="update_user_success">更新监护人信息成功</string>
    <string name="update_user_admin_success">更新管理员信息成功</string>
    <string name="delete_monitor_object">删除监护对象</string>
    <string name="add_device_notice_title">请先添加手表</string>
    <string name="add_device_jump">检测到您的帐户没有关联手表，现在开始关联手表？\n(您也可以稍后到 设置->账户管理 中管理和关联手表)</string>
    <string name="pwd_can_see">密码可见</string>
    <string name="pwd_cannot_see">密码不可见</string>
    <string name="updata_freind_msg_succ">更新好友信息成功</string>
    <string name="add_friend_succ">增加好友成功</string>
    <string name="add_friend_loading">正在上传...</string>
    <string name="chat_select_image">图片</string>
    <string name="chat_select_bluetooth_against_losing">蓝牙防丢</string>
    <string name="chat_select_overstep_police">越界报警</string>
    <string name="chat_select_call_phone">电话</string>
    <string name="sound_recording">录音</string>
    <string name="child_story">儿歌/故事</string>
    <string name="safe_zone">安全区域</string>
    <string name="chat_select_camera">相机</string>
    <string name="chat_select_confirm_sos">确认SOS</string>
    <string name="chat_select_delete_sos">清除SOS</string>
    <string name="chat_select_phone_bill">话费查询</string>
    <string name="chat_select_video">视频</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="device_name">昵称</string>
    <string name="device_birthday">生日</string>
    <string name="device_phone">手机号</string>
    <string name="device_qianming">个人签名</string>
    <string name="device_birthday_hint">请选择</string>
    <string name="device_sign_hint">未填写</string>
    <string name="not_edit_is_null">不修改则留空</string>
    <string name="device_sign_name_hint">三个汉字或六个字符</string>
    <string name="setup_rest_time">免打扰模式</string>
    <string name="setup_auio_control">音量调整</string>
    <string name="setup_alarm">闹钟</string>
    <string name="my_wifi">家庭WIFI</string>
    <string name="fence_home">家</string>
    <string name="fence_grandmother_home">姥姥家</string>
    <string name="fence_grandma_home">奶奶家</string>
    <string name="fence_school">学校</string>
    <string name="fence_cram_school">补习班</string>
    <string name="fence_teacher_home">老师家</string>
    <string name="fence_edit_prompt">您可能想输入...</string>
</resources>