<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
        >
    <TextView
            android:id="@+id/tv_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:singleLine="true"
            android:text="@string/friends_manager"
            android:background="@drawable/selector_add_choice"
            />
    <TextView
            android:id="@+id/tv_add_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:singleLine="true"
            android:text="@string/keeper_manager"
            android:background="@drawable/selector_add_choice"
            />
    <TextView

            android:id="@+id/tv_add_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/selector_add_choice"
            android:text="@string/keeper_object_manager"
            />
</LinearLayout>