<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:padding="10dp"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="区域名称"
            android:textSize="20sp"
            android:padding="5dp"
            android:textColor="@color/link_blue"
            />
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />
    <LinearLayout
            android:id="@+id/fence_wait_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/fence_edit_prompt"
                />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
            <Button
                    android:id="@+id/fence_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/fence_home"
                    android:textSize="20sp"
                    android:background="#70FFF5EE"
                    />
            <Button
                    android:id="@+id/fence_grandmother_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/fence_home"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fence_grandmother_home"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="#70FFF5EE"
                    />
            <Button
                    android:id="@+id/fence_grandma_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/fence_grandmother_home"
                    android:text="@string/fence_grandma_home"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="#70FFF5EE"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
            <Button
                    android:id="@+id/fence_school"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/fence_school"
                    android:textSize="20sp"
                    android:background="#70FFF5EE"
                    />
            <Button
                    android:id="@+id/fence_cram_school"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/fence_school"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fence_cram_school"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="#70FFF5EE"
                    />
            <Button
                    android:id="@+id/fence_teacher_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/fence_cram_school"
                    android:text="@string/fence_teacher_home"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="#70FFF5EE"
                    />
        </LinearLayout>
    </LinearLayout>
    <EditText
            android:id="@+id/fencen_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="请输入名称"
            android:background="@drawable/chat_content_edit"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <Button
                android:id="@+id/cancel_setup_fence_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="取消"
                android:textSize="20sp"
                android:background="@drawable/message_select"
                />
        <Button
                android:id="@+id/ok_setup_fence_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="确定"
                android:textSize="20sp"
                android:background="@drawable/message_select"
                />
    </LinearLayout>
</LinearLayout>