<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
        <LinearLayout
                android:id="@+id/bluetooth_against_losing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bluetooth_against_losing"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_bluetooth_against_losing"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                android:visibility="gone"
                >
            <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/phone_ico"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_call_phone"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                android:visibility="gone"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_photo"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_image"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/sound_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                android:visibility="gone"
                >
            <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/record_animate_07"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_recording"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/add_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                android:visibility="gone"
                >
            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_camera"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_camera"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_child_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_child_story"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_story"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_confirm_sos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_confirm_sos"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_confirm_sos"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/add_safe_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_safe_zone"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safe_zone"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
        <LinearLayout
                android:id="@+id/add_dormancy_periods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_dormancy_periods"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_rest_time"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_audio_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_audio_control"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_auio_control"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_delete_sos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_delete_sos"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_delete_sos"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/add_phone_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/message_select"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_phone_bill"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_select_phone_bill"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
            <LinearLayout
                    android:id="@+id/add_home_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                   android:background="@drawable/message_select"
                    android:visibility="gone"
                    >
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/wifi_layout_iv"
                            />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_wifi"
                            android:textSize="10sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#727272"
                            />
            </LinearLayout>
        <LinearLayout
                android:id="@+id/add_live_assistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
               android:background="@drawable/message_select"
                android:visibility="gone"
                >
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/alarm_layout_iv"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_alarm"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>